--- a/style.css
+++ b/style.css
@@ -139,11 +139,22 @@
   margin-left: 12px;
   top: 0;
 }
-.palyer_state{
+.player_state{
   height: inherit;
   width: 50px;
-  background: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.fa{
+  color: #2bff31;
+  width: 15px;
+  height: 15px;
+  position: relative;
+  display: block;
+}
+
 .display_time{
   width: 90px;
   height: inherit;
@@ -151,7 +162,6 @@
   font-size: 40px;
   text-align: center;
   line-height: 35.5px;
-  /* font-family: "Max beats"; */
   text-align: center;
 }
 .header_music_bar{
@@ -167,7 +177,19 @@
   color: #2bff31;
   overflow: hidden;
 }
-
+.musicBarScroll {
+  display: inline-block;
+  padding-left: 100%;
+  animation: scroll 25s linear infinite;
+}
+@keyframes scroll {
+  0%{
+    transform: translate(0,0);
+  }
+  100%{
+    transform: translate(-100%,0);
+  }
+}
 .header_music_info{
   display: flex;
   align-items: center;
@@ -207,13 +229,18 @@
   text-align: center;
   line-height: 16px;
 }
-.info_music_qualtiy{
+.info_music_quality{
   display: flex;
   margin-left: auto;
   color: #9595a3;
 }
 .music_mono{
   margin-right: 7px;
+}
+.activeQuality{
+  color: #2bff31;
+  text-shadow: 0 0 6px #2bff31,
+               0 0 10px #2bff31;
 }
 .header_music_controls{
   margin-top: 10px;
@@ -405,6 +432,7 @@ background: url("./img/next.png") no-repeat center / cover;
   border-left: 2px solid #0f0f1c;
   border-bottom: 2px solid #5f5f66;
   border-right: 2px solid #5f5f66;
+  overflow-y: scroll;
 }
 .playlist_menu{
   margin-top: 7px;
@@ -413,36 +441,22 @@ background: url("./img/next.png") no-repeat center / cover;
 }
 .playlist_list{
   list-style: none;
-  counter-reset: playlist;
 }
-.playlist_item{
-  position: relative;
+.playlist_item{;
   color: #2bff31;
   display: list-item;
-  white-space: nowrap;
-  list-style-position: inside;
-  padding-left: 5px;
+  padding-left: 3px;
   height: 20px;
   line-height: 20px;
-  position: relative;
   cursor: pointer;
-}
-.playlist_item::before{
-  position: absolute;
-  counter-increment: playlist;
-  content: counter(playlist)".";
-  text-align: center;
-  display: inline-block;
-  top: 0;
-  left: 0;
+  position: relative;
 }
 .playlist_songName{
   white-space: nowrap;
-  width: 92%;
+  width: 90%;
   overflow: hidden;
   display: inline-block;
   line-height: 20px;
-  padding-left: 10px;
 }
 .playlist_songTime{
   height: inherit;
@@ -537,6 +551,7 @@ height: 13px;
   display: flex;
 }
 .menu_music_time{
+  padding-left: 23px;
   margin-left: 1px;
   width: 62px;
   height: 17px;
@@ -546,7 +561,7 @@ height: 13px;
   border-bottom: 2px solid #5f5f66;
   border-right: 2px solid #5f5f66;
   color: #2bff31;
-  text-align: right;
+  text-align: center;
   line-height: 10px;
   font-size: 16px;
   padding-right: 5px;
