--- a/style.css
+++ b/style.css
@@ -4,11 +4,7 @@
   box-sizing: border-box;
   font-family: "VT323";
 }
-@font-face {
-  font-family: "Max beats";
-  src: url("./fonts/maximalbeasts.ttf") format("truetype");
-  font-weight: normal;
-}
+
 .winamp{
   display: flex;
 }
@@ -19,7 +15,7 @@
   border: 2px solid #5f5f66;
 }
 
-.player_title{
+.title_wrapper{
   position: relative;
 }
 .logo{
@@ -31,7 +27,7 @@
   height: 11px;
   background: url("./img/logo.png") no-repeat center / cover;
 }
-.player_title_text{
+.title_text{
   position: relative;
   text-transform: uppercase;
   font-weight: 470;
@@ -40,20 +36,20 @@
   text-align: center;
   letter-spacing: 2px;
 }
-.player_title_text:before{
+.title_text:before{
   position: absolute;
   content: "";
-  width: 162px;
+  width: 171px;
   height: 11px;
   background: url("./img/titleline.png") no-repeat center / cover;
   left: 35px;
   top: 50%;
   margin-top: -5.5px;
 }
-.player_title_text:after{
+.title_text:after{
   position: absolute;
   content: "";
-  width: 141px;
+  width: 151px;
   height: 11px;
   background: url("./img/titlelineafter.png") no-repeat center / cover;
   right: 57px;
@@ -84,7 +80,7 @@
   background: url("./img/cross.png") no-repeat center / cover;
   cursor: pointer;
 }
-.player_main{
+.section_wrapper{
   position: relative;
   margin-left: 6px;
   width: 455px;
@@ -93,7 +89,7 @@
   border-left: 2px solid #5f5f66;
   z-index: 2;
 }
-.player_main:before{
+.section_wrapper:before{
   content: "";
   position: absolute;
   width: 461px;
@@ -250,6 +246,7 @@
   align-items: center;
 }
 .volume{
+  -webkit-appearance: none;
   width: 112px;
   height: 10px;
   border-radius: 5px;
@@ -257,8 +254,10 @@
   border-left: 1px solid #0f0f1c;
   border-bottom: 1px solid #5f5f66;
   border-right: 1px solid #5f5f66;
+  outline: none;
 }
 .changeSide{
+  -webkit-appearance: none;
   width: 63px;
   height: 10px;
   border-radius: 5px;
@@ -266,6 +265,16 @@
   border-left: 1px solid #0f0f1c;
   border-bottom: 1px solid #5f5f66;
   border-right: 1px solid #5f5f66;
+  outline: none;
+}
+.volume[type=range]::-webkit-slider-thumb, .changeSide[type=range]::-webkit-slider-thumb{
+  -webkit-appearance: none;
+  background: url("./img/btnrange.png") no-repeat center / cover;
+  width: 24px;
+  height: 18px;
+  border-radius: 1px;
+  border: none;
+  cursor: pointer;
 }
 .volume[type=range]::-moz-range-thumb, .changeSide[type=range]::-moz-range-thumb {
   background: url("./img/btnrange.png") no-repeat center / cover;
@@ -289,6 +298,14 @@
   border: none;
   cursor: pointer;
 }
+.timeline[type=range]::-webkit-slider-thumb{
+  -webkit-appearance: none;
+ background: url("./img/btntimeline.png") no-repeat center / cover;
+ width: 48px;
+ height: 17px;
+ border: none;
+ cursor: pointer;
+}
 .timeline[type=range]::-moz-range-thumb {
   background: url("./img/btntimeline.png") no-repeat center / cover;
   width: 48px;
@@ -297,6 +314,8 @@
   cursor: pointer;
 }
 .timeline{
+  -webkit-appearance: none;
+  outline: none;
   width: 428px;
   height: 17px;
   background: transparent;
@@ -366,38 +385,148 @@ background: url("./img/next.png") no-repeat center / cover;
   width: 31px;
   height: 31px;
 }
+.winamp_equalizer{
+  width: 475px;
+  height: 200px;
+  background: linear-gradient(to right, #1d1d2b 0%, #393a59 15% 95%, #212132 100%);
+  border: 2px solid #5f5f66;
+}
+.equalizer_text:before{
+  left: 6px;
+  width: 158px;
+}
+.equalizer_text:after{
+  width: 158px;
+  right: 40px;
+  width: 125px;
+}
+.equalizer_wrapper{
+  position: relative;
+}
+.equalizer_header{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
+}
+.equalizer_line{
+  height: 35px;
+  width: 188px;
+  background: url("./img/bgeq.svg") no-repeat center;
+}
+.btn_on{
+  border: none;
+  background: url("./img/btnon.png") no-repeat center / cover;
+  width: 46px;
+  height: 23px;
+}
+.btn_auto{
+  border: none;
+  background: url("./img/btnauto.png") no-repeat center / cover;
+  width: 58px;
+  height: 23px;
+}
+.btn_presets{
+  border: none;
+  background: url("./img/presets.png") no-repeat center / cover;
+  width: 78px;
+  height: 22px;
+}
+.eq_item_wrapper{
+  display: block;
+  position: relative;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  margin-top: -6.5px;
+}
+.eq_item_wrapper:before{
+  content: " ⃓ ";
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.eq_item_wrapper:after{
+  content: " ⃓ ";
+  position: absolute;
+  right: 2px;
+  top: 0;
+}
+.equalizer_main{
+  display: flex;
+  flex-direction: column;
+  height: 430px;
+  width: 100px;
+  transform: rotate(-90deg);
+  position: absolute;
+  top: -115px;
+  left: 180px;
+}
+#preamp{
+  margin-top: 0.5px;
+}
+.labelDB{
+  transform: rotate(90deg);
+  position: relative;
+  color: #e3b427;
+  font-size: 17px;
+  margin-top: -5px;
+  margin-bottom: -90px;
+  margin-left: -20px;
+  display: inline-block;
+}
+.labelDB span {
+  display: block;
+  margin-bottom: 25px;
+  cursor: pointer;
+}
+.equalizer_filter::-webkit-slider-thumb{
+  -webkit-appearance: none;
+  transform: rotate(90deg);
+  background: url("./img/btnrangeeq.png") no-repeat center / cover;
+  width: 18px;
+  height: 18px;
+  border: none;
+  cursor: pointer;
+}
+.equalizer_filter::-moz-range-thumb {
+  transform: rotate(90deg);
+  background: url("./img/btnrangeeq.png") no-repeat center / cover;
+  width: 18px;
+  height: 18px;
+  border: none;
+  cursor: pointer;
+}
+.equalizer_filter{
+  outline: none;
+  -webkit-appearance: none;
+  display: inline-block;
+  margin: 3.5px 0px 5px  0px;
+  width: 100px;
+  height: 10px;
+  position: relative;
+  border-radius: 5px;
+  position: relative;
+}
 .winamp_playlist{
   width: 518px;
   height: 400px;
   background: linear-gradient(to right, #1d1d2b 0%, #393a59 15% 95%, #212132 100%);
   border: 2px solid #5f5f66;
 }
-.playlist_title{
-  position: relative;
-}
-.playlist_title_text{
-  position: relative;
-  text-align: center;
-  text-transform: uppercase;
-  color: #fff;
+
+.playlist_text{
   letter-spacing: 1px;
 }
-.playlist_title_text:before{
-  position: absolute;
-  content: "";
-  width: 188px;
+.playlist_text:before{
+  width: 192px;
   height: 11px;
-  background: url("./img/titleline.png") no-repeat center / cover;
   left: 6px;
   top: 50%;
   margin-top: -5.5px;
 }
-.playlist_title_text:after{
-  position: absolute;
-  content: "";
-  width: 155px;
+.playlist_text:after{
+  width: 160px;
   height: 11px;
-  background: url("./img/titlelineafter.png") no-repeat center / cover;
   right: 40px;
   top: 50%;
   margin-top: -5.5px;
@@ -435,6 +564,7 @@ background: url("./img/next.png") no-repeat center / cover;
   border-right: 2px solid #5f5f66;
   overflow-y: scroll;
 }
+
 .playlist_menu{
   margin-top: 7px;
   display: flex;
@@ -572,4 +702,9 @@ height: 13px;
 }
 .menu_time_playlist{
   display: inline-block;
+}
+.block-info{
+  width: 600px;
+  height: 300px;
+  border: 4px solid green;
 }
